fix: 修复 组件hooks回调 会调用到其他组件的hooks回调 bug

--- a/react-like/tsconfig.json
+++ b/react-like/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "esModuleInterop": true,
+        "downlevelIteration":true,
         "jsx": "preserve",
         "module": "CommonJS",
         "lib": ["ES2017", "DOM"],
