--- a/berial-like/package.json
+++ b/berial-like/package.json
@@ -17,7 +17,6 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^8.1.0",
@@ -28,6 +27,7 @@
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "rollup": "^2.58.3",
+    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.4.4"
   },
   "husky": {
