feat: 加入沙箱 (源代码中当前版本并没使用沙箱)

--- a/berial-like/.eslintrc
+++ b/berial-like/.eslintrc
@@ -20,6 +20,9 @@
     }
   },
   "plugins": ["@typescript-eslint"],
+  "globals": {
+    "__DEV__": true
+  },
   "env": {
     "browser": true
   },
