--- a/berial-like/tsconfig.json
+++ b/berial-like/tsconfig.json
@@ -15,6 +15,6 @@
     "baseUrl": ".",
     "outDir": "./dist"
   },
-  "include": ["./src/**/*", "./types"],
+  "include": ["src/**/*", "types"],
   "exclude": ["node_modules"]
 }
