--- a/berial-like/package.json
+++ b/berial-like/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
   "directories": {
     "test": "test"
   },
