feat: vue子应用测试基本成功! 能正常载入. 下一步考虑 umount 隐藏dom

--- a/berial-like/package.json
+++ b/berial-like/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint **/*.ts",
     "fix": "eslint **/*.ts --fix",
     "type": "tsc --project tsconfig.json --skipLibCheck --noEmit",
-    "serve": "parcel ./test/*.html"
+    "serve": "npx parcel ./test/*.html -p 1235"
   },
   "author": "",
   "license": "ISC",
